--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,61 @@
-Django==4.0.1
+amqp==2.6.1
+arrow==1.2.2
+asgiref==3.5.0
+asttokens==2.0.5
+backcall==0.2.0
+billiard==3.6.4.0
+binaryornot==0.4.4
+black==22.1.0
 celery==4.4.7
+certifi==2021.10.8
+chardet==4.0.0
+charset-normalizer==2.0.11
+click==8.0.3
+cookiecutter==1.7.3
+coverage==6.3.2
+decorator==5.1.1
+Deprecated==1.2.13
+Django==4.0.1
+django-browser-reload==1.3.0
+django-filter==21.1
+django-tailwind==3.1.1
+djangorestframework==3.13.1
+drf-nested-routers==0.93.4
+executing==0.8.2
+idna==3.3
+ipython==8.0.1
+jedi==0.18.1
+Jinja2==3.0.3
+jinja2-time==0.2.0
+kombu==4.6.11
+MarkupSafe==2.0.1
+matplotlib-inline==0.1.3
+mypy-extensions==0.4.3
+packaging==21.3
+parso==0.8.3
+pathspec==0.9.0
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==2.4.1
+poyo==0.5.0
+prompt-toolkit==3.0.28
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.11.2
+pyparsing==3.0.7
+python-dateutil==2.8.2
+python-slugify==5.0.2
+pytz==2021.3
 redis==4.1.4
+requests==2.27.1
+six==1.16.0
+sqlparse==0.4.2
+stack-data==0.2.0
+text-unidecode==1.3
+tomli==2.0.0
+traitlets==5.1.1
+typing_extensions==4.0.1
+urllib3==1.26.8
+vine==1.3.0
+wcwidth==0.2.5
+wrapt==1.13.3
