adds api and view tests

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,7 +1,3 @@
 [run]
 source = tasks
-omit = */migrations/*, *tests.py, *apps.py
-
-[report]
-source = .
-omit = */migrations/*, *tests.py, *apps.py
+omit = */migrations/*, *tests.py, *tasks.py
